
	* src/win/wpause.c: Include command.h for pause_for_mouse. (PauseBox): 
	Do not force pause-messagebox to stay on top. (WndPauseProc): "Cancel"
	button can be activated by escape key. Code cleanup.

	* term/win.trm (WIN_filled_polygon): Filled polygon are always closed.
	Ignore the last corner if it's the same as the first one.

2012-10-05  Dima Kogan  <dima@secretsauce.net>

	* lisp/gnuplot.el: With this patch, emacs mode no longer pollutes
	global comint-mode-map. Instead it applies the key bindings only to
	the gnuplot comint instance.

2012-10-05  Vladimir  <lomov_vl@users.sourceforge.net>

	* src/lisp/Makefile.am: Fix typo in yesterday's revision.

2012-10-04  Clement Law  <themanifold@gmail.com>

	* src/pm3d.c src/pm3d.h src/set.c src/save.c src/show.c
	docs/gnuplot.doc demo/pm3d.dem:
	New option 'set pm3d corners2color harmean' (harmonic mean).

2012-10-04  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in prepare lisp/Makefile.am lisp/configure.in (removed):
	Simplify build scripts for the lisp files (a.k.a. emacs gnuplot-mode).

2012-10-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Replace parsing using sscanf( "%d %d" ) with
	two calls to strtol().  This yields a 2-fold speedup in benchmarks
	with large numbers of points and vectors.

2012-09-28  Dima Kogan  <dima@secretsauce.net>

	* src/gplt_x11.c src/gplt_x11.h:  Remove dead code.

	* src/gplt_x11.c term/x11.trm:  Modify format statements used to send
	commands from x11.trm to gnuplot_x11.  Before most integers were sent
	using "%04d", now " %d".  This prevents overflow for coordinate > 9999.
	The extra byte required for a 4-digit coordinate is compensated by 
	fewer bytes needed for small integers like linetype.

	* src/gplt_x11.c src/gplt_x11.h:  Adjust point size to accommodate
	changes in window size.

2012-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/util.c (streq) src/util.h:  New utility function